--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
 	"test": "node index.js",
-	"start": "npm run index.js"
+	"start": "node index.js"
   },
   "repository": {
     "type": "git",
